# astral-life

./: Brewfile  CMakeLists.txt  README.md  build.bat  build.sh  vcpkg-configuration.json  vcpkg.json
cmake/: common.cmake  deps.cmake
src/: CMakeLists.txt  astral-life.cc
src/core/: CMakeLists.txt  app.cc  app.hh  input-context.cc  input-context.hh  window.cc  window.hh
src/engine/: glfw-context.cc  glfw-context.hh  util.cc  util.hh  window.cc  window.hh
src/pch/: CMakeLists.txt
